add lost and found

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <div class="parallax"><img src="images/home/featuredgames.png" alt="Featured Projects Banner"></div>
         </div>
 
-        <div class="container">
+        <div class="container" style="width: 100%">
             <div class="section">
                 <div class="row">
-                    <div class="col s12 m4 l4">
+                    <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/ac_vr.jpg" />
@@ -124,7 +124,7 @@
                         </div>
                     </div>
 
-                    <div class="col s12 m4 l4">
+                    <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/sotremake.jpg" />
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="col s12 m4 l4">
+                    <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/lightless_banner.png" />
@@ -161,14 +161,38 @@
                             </div>
                             <div class="card-action">
                                 <a class="waves-effect waves-light btn" href="https://www.youtube.com/watch?v=Kax36bQDNnA" target="_blank">Trailer</a>
-                                <a class="waves-effect waves-light btn" onclick="showhide_video('lightlessideodiv', 'lightlessvideoid');">Gameplay</a>
+                                <a class="waves-effect waves-light btn" onclick="showhide_video('lightlessvideodiv', 'lightlessvideoid');">Gameplay</a>
                                 <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">My Research</a>
                                 <a class="waves-effect waves-light btn"
                                     href="https://lightanic-studios.itch.io/lightless" target="_blank">Play</a>
                             </div>
-                            <div class="video-container" id="lightlessideodiv" style="display: none;">
+                            <div class="video-container" id="lightlessvideodiv" style="display: none;">
                                 <iframe id="lightlessvideoid"
                                     src="https://drive.google.com/file/d/1d0TF8PJEiHFrw5P9dAZeIGr-ya7hMSte/preview"></iframe>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m3 l3">
+                        <div class="card hoverable black">
+                            <div class="card-image">
+                                <img src="images/home/lostandfound_banner.jpg" />
+                                <span class="card-title">Lost and Found (Personal Project)</span>
+                            </div>
+                            <div class="card-content white-text">
+                                <p>
+                                    Level Designer on Lost and Found, an Action/Adventure game made using Unreal Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing brother.
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1g0tDuZd3jZVKGtba3Tpfy6aHJTYbA7R4/view" target="_blank">One Pager</a>
+                                <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/18Mi--05PXsa2Ed97HEjU6WJkOjODbij9/view" target="_blank">Level Design Blueprint</a>
+                                <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1i9rHqIoYyX75OR3Z_mjAPPrQmxJvfdLm/view" target="_blank">Level Design Document</a>
+                                <a class="waves-effect waves-light btn" onclick="showhide_video('lfvideodiv', 'lfvideoid');">Gameplay</a>
+                            </div>
+                            <div class="video-container" id="lfvideodiv" style="display: none;">
+                                <iframe id="lfvideoid"
+                                    src="https://drive.google.com/file/d/1u6ne93BtFak1B-j_ju6pslaxdhM9WTWt/preview"></iframe>
                             </div>
                         </div>
                     </div>
