add featured to ld page

--- a/leveldesign.html
+++ b/leveldesign.html
@@ -99,6 +99,116 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
+            <img src="images/home/ac_vr.jpg" />
+            <span class="card-title">Assassin's Creed for VR</span>
+          </div>
+          <div class="card-content white-text">
+            <p>
+            <ul>
+              <li>- Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft
+                Düsseldorf, and Ubisoft Reflections</li>
+              <li>- Project currently in development</li>
+            </ul>
+            </p>
+          </div>
+          <div class="card-action">
+            <!-- <a href="#" target="_blank">Trailer</a> -->
+            <a class="waves-effect waves-light btn"
+              href="https://news.ubisoft.com/en-us/article/6GznsIJyxNpulUSMJNxLs2/assassins-creed-and-splinter-cell-coming-to-oculus-vr"
+              target="_blank">Info</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4 l4">
+        <div class="card hoverable black">
+          <div class="card-image">
+            <img src="images/home/sotremake.jpg" />
+            <span class="card-title">Prince of Persia: The Sands of Time Remake</span>
+          </div>
+          <div class="card-content white-text">
+            <p>
+              Worked as a Junior Technical Level Designer and was responsible for:
+            <ul>
+              <li>- Scripting and implementation of cinematics and cutscenes</li>
+              <li>- Creating scripted events</li>
+              <li>- Setting up landscape cameras in multiple levels</li>
+            </ul>
+            </p>
+          </div>
+          <div class="card-action">
+            <a class="waves-effect waves-light btn" href="https://www.youtube.com/watch?v=htzq7EEXQs8"
+              target="_blank">Trailer</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4 l4">
+        <div class="card hoverable black">
+          <div class="card-image">
+            <img src="images/home/lightless_banner.png" />
+            <span class="card-title">Lightless (Group Project)</span>
+          </div>
+          <div class="card-content white-text">
+            <p>
+              Level Designer/Game Designer on a 3D puzzle game in
+              which you must make use of light to manipulate enemies and the
+              environment. Showcased at GDC 2019.
+            </p>
+          </div>
+          <div class="card-action">
+            <a class="waves-effect waves-light btn" href="https://www.youtube.com/watch?v=Kax36bQDNnA"
+              target="_blank">Trailer</a>
+            <a class="waves-effect waves-light btn"
+              onclick="showhide_video('lightlessvideodiv', 'lightlessvideoid');">Gameplay</a>
+            <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">My
+              Research</a>
+            <a class="waves-effect waves-light btn" href="https://lightanic-studios.itch.io/lightless"
+              target="_blank">Play</a>
+          </div>
+          <div class="video-container" id="lightlessvideodiv" style="display: none;">
+            <iframe id="lightlessvideoid"
+              src="https://drive.google.com/file/d/1d0TF8PJEiHFrw5P9dAZeIGr-ya7hMSte/preview"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s12 m4 l4">
+        <div class="card hoverable black">
+          <div class="card-image">
+            <img src="images/home/lostandfound_banner.jpg" />
+            <span class="card-title">Lost and Found (Personal Project)</span>
+          </div>
+          <div class="card-content white-text">
+            <p>
+              Level Designer on Lost and Found, an Action/Adventure game made using Unreal Engine 5, about a girl named
+              Faith who makes her way into the depths of Egypt to rescue her missing brother.
+            </p>
+          </div>
+          <div class="card-action">
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1g0tDuZd3jZVKGtba3Tpfy6aHJTYbA7R4/view" target="_blank">One
+              Pager</a>
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/18Mi--05PXsa2Ed97HEjU6WJkOjODbij9/view" target="_blank">Level Design
+              Blueprint</a>
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1i9rHqIoYyX75OR3Z_mjAPPrQmxJvfdLm/view" target="_blank">Level Design
+              Document</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('lfvideodiv', 'lfvideoid');">Gameplay</a>
+          </div>
+          <div class="video-container" id="lfvideodiv" style="display: none;">
+            <iframe id="lfvideoid"
+              src="https://drive.google.com/file/d/1u6ne93BtFak1B-j_ju6pslaxdhM9WTWt/preview"></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m4 l4">
+        <div class="card hoverable black">
+          <div class="card-image">
             <img src="images/leveldesign/l3.png" />
             <span class="card-title">GTA 5 Transform Race Design (Individual)</span>
           </div>
@@ -106,15 +216,20 @@
             <p>Designing a race using the GTA 5 level editor.</p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
               target="_blank">Download
               Level
               Layout</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial Level</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('gta2videodiv', 'gta2videoid');">Iteration 1</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('gta3videodiv', 'gta3videoid');">Iteration 2</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('gta4videodiv', 'gta4videoid');">Iteration 3</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial
+              Level</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta2videodiv', 'gta2videoid');">Iteration
+              1</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta3videodiv', 'gta3videoid');">Iteration
+              2</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('gta4videodiv', 'gta4videoid');">Iteration
+              3</a>
           </div>
           <div class="video-container" id="gta1videodiv" style="display: none;">
             <iframe id="gta1videoid"
@@ -148,8 +263,10 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" onclick="showhide_video('golfvideodiv', 'golfvideoid');">Watch Gameplay</a>
-            <a class="waves-effect waves-light btn" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2333713135" target="_blank">Steam
+            <a class="waves-effect waves-light btn" onclick="showhide_video('golfvideodiv', 'golfvideoid');">Watch
+              Gameplay</a>
+            <a class="waves-effect waves-light btn"
+              href="https://steamcommunity.com/sharedfiles/filedetails/?id=2333713135" target="_blank">Steam
               Workshop</a>
           </div>
           <div class="video-container" id="golfvideodiv" style="display: none;">
@@ -158,7 +275,9 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -171,10 +290,13 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch Gameplay</a>
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
+            <a class="waves-effect waves-light btn" onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch
+              Gameplay</a>
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
               download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf" target="_blank">Download Document</a>
-            <a class="waves-effect waves-light btn" href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257" target="_blank">Steam
+            <a class="waves-effect waves-light btn"
+              href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257" target="_blank">Steam
               Workshop</a>
           </div>
           <div class="video-container" id="portalvideodiv" style="display: none;">
@@ -183,9 +305,7 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -199,7 +319,8 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">Read on Medium</a>
+            <a class="waves-effect waves-light btn" href="https://link.medium.com/OxJha3zDvpb" target="_blank">Read on
+              Medium</a>
           </div>
         </div>
       </div>
@@ -217,7 +338,8 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" onclick="showhide_video('fcvideodiv', 'fcvideoid');">Watch Gameplay</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fcvideodiv', 'fcvideoid');">Watch
+              Gameplay</a>
           </div>
           <div class="video-container" id="fcvideodiv" style="display: none;">
             <iframe id="fcvideoid"
@@ -225,7 +347,9 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -239,12 +363,15 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf" target="_blank">Download
               Level
               Layout</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration 1</a>
-            <a class="waves-effect waves-light btn" onclick="showhide_video('fps2videodiv', 'fps2videoid');">Iteration 2</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration
+              1</a>
+            <a class="waves-effect waves-light btn" onclick="showhide_video('fps2videodiv', 'fps2videoid');">Iteration
+              2</a>
           </div>
           <div class="video-container" id="fps1videodiv" style="display: none;">
             <iframe id="fps1videoid"
@@ -256,9 +383,7 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -269,7 +394,8 @@
             <p>Analysing a level from Playdead's INSIDE.</p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx" target="_blank">Download</a>
           </div>
         </div>
@@ -285,13 +411,16 @@
             <p>Analysing a level from Respawn's Titanfall 2.</p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
               target="_blank">Download</a>
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -302,15 +431,14 @@
             <p>A seminar on how Level Design can be used to tell a story.</p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
               download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
               target="_blank">Download</a>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
@@ -323,7 +451,8 @@
             </p>
           </div>
           <div class="card-action">
-            <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1IuqwKa2ut4_H81LDEoUDN4xFixhrAtd5/view?usp=sharing"
+            <a class="waves-effect waves-light btn"
+              href="https://drive.google.com/file/d/1IuqwKa2ut4_H81LDEoUDN4xFixhrAtd5/view?usp=sharing"
               download="Varun Sunil Bajaj - Steep Level Design Document.pdf" target="_blank">Download</a>
           </div>
         </div>
