--- a/index.html
+++ b/index.html
@@ -109,10 +109,8 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    <ul>
-                                        <li>- Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf, and Ubisoft Reflections</li>
-                                        <li>- Project currently in development</li>
-                                    </ul>
+                                    Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf, and Ubisoft Reflections.
+                                    <br>Project currently in development.
                                 </p>
                             </div>
                             <div class="card-action">
@@ -181,7 +179,7 @@
                             </div>
                             <div class="card-content white-text">
                                 <p>
-                                    Level Designer on Lost and Found, an Action/Adventure game made using Unreal Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing brother.
+                                    Level Designer/Game Designer on Lost and Found, an Action/Adventure game being developed using Unreal Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing brother.
                                 </p>
                             </div>
                             <div class="card-action">
