--- a/leveldesign.html
+++ b/leveldesign.html
@@ -104,11 +104,9 @@
           </div>
           <div class="card-content white-text">
             <p>
-            <ul>
-              <li>- Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft
-                Düsseldorf, and Ubisoft Reflections</li>
-              <li>- Project currently in development</li>
-            </ul>
+              Working as a Level Designer in collaboration with Ubisoft’s Red Storm Entertainment, Ubisoft Düsseldorf,
+              and Ubisoft Reflections.
+              <br>Project currently in development.
             </p>
           </div>
           <div class="card-action">
@@ -151,9 +149,9 @@
           </div>
           <div class="card-content white-text">
             <p>
-              Level Designer/Game Designer on a 3D puzzle game in
-              which you must make use of light to manipulate enemies and the
-              environment. Showcased at GDC 2019.
+              Level Designer/Game Designer on Lost and Found, an Action/Adventure game being developed using Unreal
+              Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing
+              brother.
             </p>
           </div>
           <div class="card-action">
