--- a/leveldesign.html
+++ b/leveldesign.html
@@ -149,9 +149,9 @@
           </div>
           <div class="card-content white-text">
             <p>
-              Level Designer/Game Designer on Lost and Found, an Action/Adventure game being developed using Unreal
-              Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing
-              brother.
+              Level Designer/Game Designer on a 3D puzzle game in
+              which you must make use of light to manipulate enemies and the
+              environment. Showcased at GDC 2019.
             </p>
           </div>
           <div class="card-action">
@@ -181,8 +181,9 @@
           </div>
           <div class="card-content white-text">
             <p>
-              Level Designer on Lost and Found, an Action/Adventure game made using Unreal Engine 5, about a girl named
-              Faith who makes her way into the depths of Egypt to rescue her missing brother.
+              Level Designer/Game Designer on Lost and Found, an Action/Adventure game being developed using Unreal
+              Engine 5, about a girl named Faith who makes her way into the depths of Egypt to rescue her missing
+              brother.
             </p>
           </div>
           <div class="card-action">
