add medium link, remove presentation

--- a/gamedesign.html
+++ b/gamedesign.html
@@ -106,9 +106,9 @@
                         <p>Critiquing the world's most popular puzzle experience!</p>
                     </div>
                     <div class="card-action">
-                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1d7_gtC8nNZKRs8eqlJUFv3C0IdyA5S73/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Critique 1 - Escape Rooms.pdf"
-                            target="_blank">Download</a>
+                        <a class="waves-effect waves-light btn"
+                            href="https://medium.com/@varunbajaj/escape-rooms-a-game-design-critique-63abf405e6b8"
+                            target="_blank">Read</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://link.medium.com/m3kIWsmQ0qb"
-                            target="_blank">Read on Medium</a>
+                            target="_blank">Read</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://link.medium.com/mOLlXTkQ0qb"
-                            target="_blank">Read on Medium</a>
+                            target="_blank">Read</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,8 @@
                         <p>Critiquing this choice-driven interactive narrative storytelling experience!</p>
                     </div>
                     <div class="card-action">
-                        <a class="waves-effect waves-light btn" href="https://link.medium.com/eopZGxbsppb" target="_blank">Read on Medium</a>
+                        <a class="waves-effect waves-light btn" href="https://link.medium.com/eopZGxbsppb"
+                            target="_blank">Read</a>
                     </div>
                 </div>
             </div>
@@ -165,15 +166,12 @@
                         <span class="card-title">Word of the Grey (Group)</span>
                     </div>
                     <div class="card-content white-text">
-                        <p>A presentation and complete Game Design Document for a one-of-a-kind 2D puzzle platformer.
+                        <p>A complete Game Design Document for a one-of-a-kind 2D puzzle platformer.
                         </p>
                     </div>
                     <div class="card-action">
-                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1Ji6DKXJkelWEnf903YtMp3jpVPztxcbu/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Design - Word of the Grey Presentation.pptx"
-                            target="_blank">Download
-                            Presentation</a>
-                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
+                        <a class="waves-effect waves-light btn"
+                            href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
                             target="_blank">Download
                             Design Doc</a>
