remove unwanted Downloads from buttons

--- a/gamedesign.html
+++ b/gamedesign.html
@@ -173,8 +173,7 @@
                         <a class="waves-effect waves-light btn"
                             href="https://drive.google.com/file/d/19PFEwsIob7_YlmpJV5jh3RryWJNf-4S4/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Design - Word of the Grey Design Document.pdf"
-                            target="_blank">Download
-                            Design Doc</a>
+                            target="_blank">Game Design Document</a>
                     </div>
                 </div>
             </div>
