--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -370,7 +370,7 @@
                     </div>
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1f-x0ErspAmtIwns7HEuEW6Bdb5MjP4zL/view?usp=sharing"
-                            download="SportsGameRuleSheet_VarunBajaj.pdf" target="_blank">Download</a>
+                            download="SportsGameRuleSheet_VarunBajaj.pdf" target="_blank">Rule Sheet</a>
                     </div>
                 </div>
             </div>
@@ -387,9 +387,9 @@
                     </div>
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1To0hCO4H7jHEv4odhTFPLWIUSqYvmbB4/view?usp=sharing"
-                            download="ThereWillBeBlood_VarunBajaj.pdf" target="_blank">Download Rule Sheet</a>
+                            download="ThereWillBeBlood_VarunBajaj.pdf" target="_blank">Rule Sheet</a>
                         <a class="waves-effect waves-light btn" href="images/gameplay_prototyping/There Will Be Blood Game Board - Varun Sunil Bajaj.jpg"
-                            download="ThereWillBeBlood_GameBoard.jpg" target="_blank">Download Game Board</a>
+                            download="ThereWillBeBlood_GameBoard.jpg" target="_blank">Game Board</a>
                     </div>
                 </div>
             </div>
