--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <span class="card-title">Game Development Processes</span>
                             </div>
                             <div class="card-content white-text">
-                                <p>Development Methods, Postmortems, Risk Assessments, Concept Documents, Pitches and
+                                <p>Development Methods, Postmortems, Risk Assessments and
                                     Quality Assurance.</p>
                             </div>
                             <div class="card-action">
