--- a/gamedev.html
+++ b/gamedev.html
@@ -99,7 +99,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamedev/tempest (1).jpg">
+                        <img src="images/gamedev/tempest.jpg">
                         <span class="card-title">Tempest Quality Assurance Process (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -108,44 +108,10 @@
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1Fz--PJUun96ao1raksRV8y54uccBKkmU/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Tempest Quality Assurance Process.zip"
-                            target="_blank">Download</a>
+                            target="_blank">View</a>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gamedev/ritj.jpg">
-                        <span class="card-title">Rumble in the Jungle Game Pitch (Group)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>Presentation for a game we pitched in class!</p>
-                    </div>
-                    <div class="card-action">
-                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1_izqe0to5qIgeZKqf5cgVAx_2nf-fo9q/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Development Processes - Rumble in the Jungle Game Pitch.pptx"
-                            target="_blank">Download</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="card hoverable black">
-                    <div class="card-image">
-                        <img src="images/gamedev/esc.jpg">
-                        <span class="card-title">Esc High Concept Document (Individual)</span>
-                    </div>
-                    <div class="card-content white-text">
-                        <p>An HCD for a game I designed called Esc, set in ancient Egypt.</p>
-                    </div>
-                    <div class="card-action">
-                        <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1x0zzl-mEu5S_AA5wNsAb1XpfYJ2il-Ga/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Game Development Processes - Esc High Concept Document.docx"
-                            target="_blank">Download</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
@@ -158,7 +124,7 @@
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1VogRhjb82St7Nmo7_3cUa4xxMNU2-207/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Donkey Kong - Features, Systems, Feature-Systems Matrix & Risk Assessment Grid.docx"
-                            target="_blank">Download</a>
+                            target="_blank">View</a>
                     </div>
                 </div>
             </div>
@@ -174,15 +140,17 @@
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/16uM6RvcOgK2kdurQnGfnDdJWntcoKMPr/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Call of Duty Modern Warfare Postmortem.docx"
-                            target="_blank">Download</a>
+                            target="_blank">View</a>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
                         <img src="images/gamedev/idea.jpg">
-                        <span class="card-title">Blue Sky Open Idea Formation and Brainstorming (Individual)</span>
+                        <span class="card-title black-text">Blue Sky Open Idea Formation and Brainstorming (Individual)</span>
                     </div>
                     <div class="card-content white-text">
                         <p>A discussion about Blue Sky Open Idea Formation and Brainstorming.</p>
@@ -190,7 +158,7 @@
                     <div class="card-action">
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1TjyPSdlgYCU3ABY_FykDFwNghle1C8_J/view?usp=sharing"
                             download="Varun Sunil Bajaj - Game Development Processes - Blue Sky Open Idea Formation and Brainstorming.docx"
-                            target="_blank">Download</a>
+                            target="_blank">View</a>
                     </div>
                 </div>
             </div>
