--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -112,8 +112,7 @@
                         <a class="waves-effect waves-light btn" onclick="showhide_video('lvl2videodiv', 'lvl2videoid');">View Level 2 Pitch</a>
                         <a class="waves-effect waves-light btn" onclick="showhide_video('gamevideodiv', 'gamevideoid');">Walkthrough</a>
                         <a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1vjOmxKLLtA21K7dQnXebfymWCfLTu_KQ/view?usp=sharing"
-                            download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf" target="_blank">Download
-                            Game Design
+                            download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf" target="_blank">Game Design
                             Document</a>
                     </div>
                     <div class="video-container" id="lvl1videodiv" style="display: none;">
