--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -49,7 +49,7 @@
         <div class="navbar-fixed">
             <nav class="white" role="navigation">
                 <div class="nav-wrapper container">
-                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj</a>
+                    <a id="logo-container" href="index.html" class="brand-logo">Varun Bajaj <span class="grey-text text-darken-3">|</span> <span class="grey-text text-darken-2">Level Designer</span></a>
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a href="index.html">Home</a>
