enable snow on home page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- snow -->
-    <!--<script type="text/javascript" src="js/snowstorm-min.js"></script>
-            <script>
-                snowStorm.excludeMobile = false;
-            </script>-->
+    <script type="text/javascript" src="js/snowstorm-min.js"></script>
+    <script>
+        snowStorm.excludeMobile = false;
+    </script>
     <!-- snow end -->
 </head>
 
