--- a/gamedesign.html
+++ b/gamedesign.html
@@ -56,7 +56,7 @@
                         </li>
                         <li>
                             <ul id="work-dropdown" class="dropdown-content">
-                                <li><a href="leveldesign.html">Level Design</a></li>
+                                <li><a href="index.html#featured_projects">Level Design</a></li>
                                 <li class="divider"></li>
                                 <li><a href="gamedesign.html">Game Design</a></li>
                                 <li class="divider"></li>
@@ -76,9 +76,7 @@
 
                     <ul id="nav-mobile" class="side-nav">
                         <li><a href="Varun_Bajaj_Resume.pdf" download="Varun Bajaj-Resume.pdf">Download Resume</a></li>
-                        <li><a href="index.html#featured_projects">Home - Featured Projects</a></li>
-                        <li class="divider"></li>
-                        <li><a href="leveldesign.html">Level Design</a></li>
+                        <li><a href="index.html#featured_projects">Level Design</a></li>
                         <li><a href="gamedesign.html">Game Design</a></li>
                         <li><a href="gamedev.html">Game Development Processes</a></li>
                         <li><a href="gameplay_prototyping.html">Gameplay and Prototyping</a></li>
