turn off followMouse for snow

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="js/snowstorm-min.js"></script>
     <script>
         snowStorm.excludeMobile = false;
+        snowStorm.followMouse = false;
     </script>
     <!-- snow end -->
 </head>
