--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <div class="section no-pad-bot">
                 <div class="container">
                     <div class="row center">
-                        <h5 class="header col s12 light">My Work</h5>
+                        <h5 class="header col s12 light">Here's some of my other work!</h5>
                     </div>
                 </div>
             </div>
@@ -465,15 +465,15 @@
                     <div class="col s12 m4 l4">
                         <div class="card hoverable black">
                             <div class="card-image">
-                                <img src="images/home/leveldesign.png">
-                                <span class="card-title black-text">Level Design</span>
+                                <img src="images/home/gameplay.jpeg" src="height: 319px; width:792px">
+                                <span class="card-title" style="color: black">Gameplay and Prototyping</span>
                             </div>
                             <div class="card-content white-text">
-                                <p>Level layouts, design and analyses, seminars.</p>
+                                <p>Weekly individual and team-based game jams!</p>
                             </div>
                             <div class="card-action">
-                                <a class="waves-effect waves-light btn" href="index.html#featured_projects" target="_blank">Check
-                                    out My Work</a>
+                                <a class="waves-effect waves-light btn" href="gameplay_prototyping.html"
+                                    target="_blank">Check out My Work</a>
                             </div>
                         </div>
                     </div>
@@ -511,21 +511,6 @@
                 </div>
 
                 <div class="row">
-                    <div class="col s12 m4 l4">
-                        <div class="card hoverable black">
-                            <div class="card-image">
-                                <img src="images/home/gameplay.jpeg" src="height: 319px; width:792px">
-                                <span class="card-title" style="color: black">Gameplay and Prototyping</span>
-                            </div>
-                            <div class="card-content white-text">
-                                <p>Weekly individual and team-based game jams!</p>
-                            </div>
-                            <div class="card-action">
-                                <a class="waves-effect waves-light btn" href="gameplay_prototyping.html"
-                                    target="_blank">Check out My Work</a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col s12 m4 l4">
                         <div class="card hoverable black">
                             <div class="card-image">
