--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                                 <a class="waves-effect waves-light btn"
                                     href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
                                     download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx"
-                                    target="_blank">Download</a>
+                                    target="_blank">Read</a>
                             </div>
                         </div>
                     </div>
@@ -440,7 +440,7 @@
                                 <a class="waves-effect waves-light btn"
                                     href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
                                     download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
-                                    target="_blank">Download</a>
+                                    target="_blank">Read</a>
                             </div>
                         </div>
                     </div>
