remove download from homepage

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <a class="waves-effect waves-light btn"
                                     href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
                                     download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf"
-                                    target="_blank">Download Document</a>
+                                    target="_blank">Level Design Document</a>
                                 <a class="waves-effect waves-light btn"
                                     href="https://steamcommunity.com/sharedfiles/filedetails/?id=1667976257"
                                     target="_blank">Steam
@@ -261,8 +261,7 @@
                                 <a class="waves-effect waves-light btn"
                                     href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
                                     download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
-                                    target="_blank">Download
-                                    Level
+                                    target="_blank">Level
                                     Layout</a>
                                 <a class="waves-effect waves-light btn"
                                     onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial
@@ -367,8 +366,7 @@
                                 <a class="waves-effect waves-light btn"
                                     href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
                                     download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf"
-                                    target="_blank">Download
-                                    Level
+                                    target="_blank">Level
                                     Layout</a>
                                 <a class="waves-effect waves-light btn"
                                     onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration
