--- a/index.html
+++ b/index.html
@@ -647,15 +647,18 @@
                                 <h5 class="white-text">My Certifications</h5>
                             </div>
                             <div class="carousel-item" href="#one!">
-                                <img class="responsive-img" src="images/home/udemy-leveldesign.jpg">
+                                <img class="responsive-img" src="images/home/udemy-blueprint-gamedev.jpg">
                             </div>
                             <div class="carousel-item" href="#two!">
-                                <img class="responsive-img" src="images/home/mit.jpg">
+                                <img class="responsive-img" src="images/home/udemy-leveldesign.jpg">
                             </div>
                             <div class="carousel-item" href="#three!">
-                                <img class="responsive-img" src="images/home/ue4.jpg">
+                                <img class="responsive-img" src="images/home/mit.jpg">
                             </div>
                             <div class="carousel-item" href="#four!">
+                                <img class="responsive-img" src="images/home/ue4.jpg">
+                            </div>
+                            <div class="carousel-item" href="#five!">
                                 <img class="responsive-img" src="images/home/BEC.jpg">
                             </div>
                         </div>
