--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- snow -->
-    <script type="text/javascript" src="js/snowstorm-min.js"></script>
+    <!--<script type="text/javascript" src="js/snowstorm-min.js"></script>
     <script>
         snowStorm.excludeMobile = false;
         snowStorm.followMouse = false;
-    </script>
+    </script>-->
     <!-- snow end -->
 </head>
 
@@ -186,7 +186,7 @@
                         <div class="card hoverable black">
                             <div class="card-image">
                                 <img src="images/home/lostandfound_banner.jpg" />
-                                <span class="card-title">Lost and Found (Personal Project)</span>
+                                <span class="card-title">Lost and Found (Individual)</span>
                             </div>
                             <div class="card-content white-text">
                                 <p>
@@ -206,7 +206,7 @@
                                     href="https://drive.google.com/file/d/1i9rHqIoYyX75OR3Z_mjAPPrQmxJvfdLm/view"
                                     target="_blank">Level Design Document</a>
                                 <a class="waves-effect waves-light btn"
-                                    onclick="showhide_video('lfvideodiv', 'lfvideoid');">Gameplay</a>
+                                    onclick="showhide_video('lfvideodiv', 'lfvideoid');">Watch Gameplay</a>
                             </div>
                             <div class="video-container" id="lfvideodiv" style="display: none;">
                                 <iframe id="lfvideoid"
@@ -217,6 +217,31 @@
                 </div>
 
                 <div class="row">
+                    <div class="col s12 m3 l3">
+                        <div class="card hoverable black">
+                            <div class="card-image">
+                                <img src="images/home/volume_banner.png" />
+                                <span class="card-title">Volume Level Design (Individual)</span>
+                            </div>
+                            <div class="card-content white-text">
+                                <p>
+                                    Created a level using the level editor provided with the game 'Volume'. Collect all the gems and escape without being spotted!
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a class="waves-effect waves-light btn"
+                                    onclick="showhide_video('volvideodiv', 'volvideoid');">Watch Gameplay</a>
+                                <!-- <a class="waves-effect waves-light btn"
+                                    href="fixlink"
+                                    target="_blank">Level Design Notes</a> -->
+                            </div>
+                            <div class="video-container" id="volvideodiv" style="display: none;">
+                                <iframe id="volvideoid"
+                                    src="https://drive.google.com/file/d/1Rvy8F_alG-yxZ1syOT9BGm1v9kH_EzVr/preview"></iframe>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
@@ -323,7 +348,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
+                <div class="row">
                     <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
@@ -347,9 +374,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="row">
+                    
                     <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
@@ -422,7 +447,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
+                <div class="row">
                     <div class="col s12 m3 l3">
                         <div class="card hoverable black">
                             <div class="card-image">
