add link to design doc

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                             <div class="card-action">
                                 <a class="waves-effect waves-light btn"
                                     onclick="showhide_video('volvideodiv', 'volvideoid');">Watch Gameplay</a>
-                                <!-- <a class="waves-effect waves-light btn"
-                                    href="fixlink"
-                                    target="_blank">Level Design Notes</a> -->
+                                <a class="waves-effect waves-light btn"
+                                    href="https://drive.google.com/file/d/1vJzpJPD4uV2AVCxkAALWNiCc3cPReSYQ/view?usp=drivesdk"
+                                    target="_blank">Level Design Notes</a>
                             </div>
                             <div class="video-container" id="volvideodiv" style="display: none;">
                                 <iframe id="volvideoid"
